# odin_compiler

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  Odin Compiler Development Discussion Sum.md  TASK_DESCRIPTION.md  any_type_support.md  builtins.odin  chained_member_access_plan.md  cli_redesign_notes.md  compiler_spec_and_implementation_architecture.txt  context_implementation_plan.md  echo_args.odin  fibonacci.odin  ir_context_stacking_analysis.md  nested_proc_plan.md  package_import_plan.md  plan.md  roadmap.md  test_comments.odin  test_suite_restructure_plan.md  unimplemented_features.md  unimplemented_features_analysis.md
.opencode/plans/: plan_soa_zip_unzip.md  plan_tuple_support.md
expected_to_fail/: test_where_clause_fail.odin
notes/: core_fmt_plan.md  dir_compilation_plan.md  file_io_plan.md  os_args_plan.md  poly_struct_plan.md  polymorphism_plan.md  refactoring_plan.md  unsupported_features.md  untyped_literals_plan.md
plans/: 01_cast_transmute.md
scripts/: convert_tests.py
src/: CMakeLists.txt  ast_metadata.h  ast_node_name.c  ast_node_name.h  ast_utils.c  ast_utils.h  debug.c  debug.h  error_list.c  error_list.h  generator_lists.c  generator_lists.h  generic_hash_table.c  generic_hash_table.h  hash.c  hash.h  ir_gen_assign.c  ir_gen_assign.h  ir_gen_error.c  ir_gen_error.h  ir_gen_operator.c  ir_gen_operator.h  ir_gen_postfix.c  ir_gen_postfix.h  ir_gen_statement.c  ir_gen_statement.h  ir_gen_var_decl.c  ir_gen_var_decl.h  ir_intrinsic.c  ir_intrinsic.h  ir_utils.c  ir_utils.h  llvm_ir_generator.c  llvm_ir_generator.h  main.c  odin_grammar.gdl  odin_grammar_ast.h  odin_grammar_ast_actions.c  odin_grammar_ast_actions.h  operator_kind.h  (+28 more)
stubs/core/fmt/: fmt.odin
stubs/core/os/: os.odin
stubs/core/runtime/: runtime.odin
stubs/src/builtin/: builtin.odin
stubs/src/intrinsics/: intrinsics.odin
stubs/src/mem/: mem.odin
stubs/src/os/: os.odin
stubs/src/runtime/: runtime.odin
test/: test_any_full.odin  test_array.odin  test_call2.odin  test_cast.odin  test_chained_member.odin  test_defer.odin  test_deref.odin  test_for.odin  test_global.odin  test_if_assign.odin  test_if_else.odin  test_nested_proc.odin  test_or_else.odin  test_param.odin  test_proc_params.odin  test_return.odin  test_short_decl.odin  test_slice_ops.odin  test_switch.odin  test_ternary.odin  test_ternary2.odin  test_transmute.odin  test_using.odin
tests/: FAILING_TESTS.md  run_tests.sh  test_align.odin  test_any.odin  test_any_assert.odin  test_any_full.odin  test_any_ops.odin  test_arr_full_slice.odin  test_array.odin  test_assert.odin  test_assert_toplevel.odin  test_attribute.odin  test_auto_cast.odin  test_bit_field.odin  test_bit_field.s  test_bit_set.odin  test_bit_set_ops.odin  test_bit_set_range.odin  test_bounds_check.odin  test_bounds_check_short_circuit.odin  test_builtin.odin  test_builtins.odin  test_call.odin  test_call2.odin  test_caller_location.odin  test_cast.odin  test_chained_member.odin  test_comparison.odin  test_complex.odin  test_complex_quaternion.odin  test_compound_type_distinct.odin  test_compound_type_ident.odin  test_compound_type_slice.odin  test_compress_values.odin  test_const_fold.odin  test_context.odin  test_core_import.odin  test_cstring.odin  test_debug_ast.odin  test_defer.odin  (+131 more)
tests/a/: a.odin
tests/b/: b.odin
tests/expected_to_fail/: test_assert_fail.odin  test_assert_toplevel_fail.odin  test_distinct_assign_base.odin  test_distinct_to_base  test_distinct_to_base.odin  test_import_cycle.odin  test_overload_ambiguous.odin  test_overload_no_match.odin  test_poly_cross_pkg_where_mismatch  test_poly_cross_pkg_where_mismatch.odin  test_poly_overload_where_ambiguous.odin  test_poly_return_unbound.odin  test_poly_struct_type_mismatch.odin  test_private_external.odin  test_switch_enum_missing.odin  test_vector_swizzle_mixed.odin  test_vector_swizzle_oob.odin  test_where_clause_fail.odin
tests/expected_to_fail/test_import_cycle_a/: test_import_cycle_a.odin
tests/expected_to_fail/test_import_cycle_b/: test_import_cycle_b.odin
tests/expected_to_fail/test_poly_cross_pkg_helper_fail/: test_poly_cross_pkg_helper_fail.odin
tests/multi_file_pkg/: .odin_pkg  constants.odin  helper.odin  main.odin
tests/multi_import_dep/: math_ops.odin  string_ops.odin
tests/output/: .gitignore
tests/private_helper/: private_helper.odin
tests/test_import_helper/: test_import_helper.odin
tests/test_poly_cross_pkg_helper/: test_poly_cross_pkg_helper.odin
